--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				National University of Defense Technology (NUDT)<p>
 				Email: yingxinyi18@nudt.edu.cn<p>				
 			</div>
-			         <a href="https://www.researchgate.net/profile/Xinyi-Ying/research" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
+			         <a href="https://www.researchgate.net/profile/Xinyi-Ying" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
 			         <a href="https://github.com/XinyiYing" target="_blank" rel="nofollow"><span>Github</span></a>  |
 				 <a href="https://scholar.google.cz/citations?user=45ifNRkAAAAJ&hl=zh-CN" target="_blank" rel="nofollow"><span>Google Scholar</span></a>  
 			
