--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				National University of Defense Technology (NUDT)<p>
 				Email: yingxinyi18@nudt.edu.cn<p>				
 			</div>
-			         <a href="https://www.researchgate.net/profile/Xinyi-Ying" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
+			         <a href="https://www.researchgate.net/profile/Yingqian_Wang3?ev=prf_highl" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
 			         <a href="https://github.com/XinyiYing" target="_blank" rel="nofollow"><span>Github</span></a>  |
 				 <a href="https://scholar.google.cz/citations?user=45ifNRkAAAAJ&hl=zh-CN" target="_blank" rel="nofollow"><span>Google Scholar</span></a>  
 			
@@ -271,8 +271,8 @@
 					</div>
 				</div>
 			</div>
-
-		<div class="paper short">
+		
+			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
 					<img border="0" width="200" height="130" src="">
@@ -280,18 +280,18 @@
 				<div class="sub-right">
 					<div class="paperTitle">
 						Incorporating Deep Background Prior Into Model-Based Method for Unsupervised Moving Vehicle Detection in Satellite Videos
+					</div>
 					<div class="paperName">
-						Chao Xiao, Ting Liu, Xinyi Ying, Yingqian Wang, Miao Li, Li Liu, Wei An, Zhijie Chen
+						Chao Xiao, Ting Liu, <b>Xinyi Ying</b>, Yingqian Wang, Miao Li, Li Liu, Wei An, Zhijie Chen
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>IEEE TGRS</b></span>, 2023.<br> 
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE TGRS</b></span>, 2023.<br> 
 					</div>
 					<div class="paperLink">
-						| <a href="https://ieeexplore.ieee.org/document/10038733" target="_blank" rel="nofollow">Paper</a>
+						| <a href="https://ieeexplore.ieee.org/document/10038733" target="_blank" rel="nofollow">Paper</a>							
 					</div>
 				</div>
 			</div>
-		
 		
 		<div class="paper short">
 				<div class="sub-left">
