--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 					<b>Xinyi Ying</b>, Yingqian Wang, Longguang Wang, Weidong Sheng, Li Liu, Zaiping Lin, Shilin Zhou
 				</div>
 				<div class="paperPub">
-					<span style="color:rgb(0, 0, 0)"> <b>JSTAR</b></span>, 2022.<br>
+					<span style="color:rgb(0, 0, 0)"> <b>IEEE JSTAR</b></span>, 2022.<br>
 				</div>
 				<div class="paperLink">
 					| <a href="https://arxiv.org/pdf/2201.01014" target="_blank" rel="nofollow">Paper</a>
@@ -408,7 +408,7 @@
 				Yingqian Wang, <b>Xinyi Ying</b>, Longguang Wang, Jungang Yang, Wei An, Yulan Guo
 			</div>
 			<div class="paperPub">
-				<span style="color:red"> <b>CVPRW</b></span>, 2022.<br>
+				<span style="color:rgb(0, 0, 0)"> <b>CVPRW</b></span>, 2022.<br>
 			</div>
 			<div class="paperLink">
 				| <a href="https://openaccess.thecvf.com/content/CVPR2021W/NTIRE/papers/Wang_Symmetric_Parallax_Attention_for_Stereo_Image_Super-Resolution_CVPRW_2021_paper.pdf" target="_blank" rel="nofollow">Paper</a>
@@ -430,7 +430,7 @@
 						Chao Xiao, Qian Yin, <b>Xinyi Ying</b>, Ruojing Li, Shuanglin Wu, Miao Li, Li Liu, Wei An, Zhijie Chen
 					</div>
 					<div class="paperPub">
-						<span style="color:rgb(0, 0, 0)"> <b>GRSL</b></span>, 2021.<br> 
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE GRSL</b></span>, 2021.<br> 
 					</div>
 					<div class="paperLink">
 						| <a href="https://ieeexplore.ieee.org/abstract/document/9594855" target="_blank" rel="nofollow">Paper</a>												
@@ -452,7 +452,7 @@
 						Xu Cao, HuanXin Zou, <b>XinYi Ying</b>, RunLin Li, ShiTian He, Fei Cheng
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>CBFD</b></span>, 2021.<br>
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE CBFD</b></span>, 2021.<br>
 					</div>
 					<div class="paperLink">
 						| <a href="https://ieeexplore.ieee.org/abstract/document/9408747/" target="_blank" rel="nofollow">Paper</a>					
@@ -473,7 +473,7 @@
 						Xu Cao, HuanXin Zou, <b>XinYi Ying</b>, RunLin Li, ShiTian He, Fei Cheng
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>ICSP</b></span>, 2021.<br>
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE ICSP</b></span>, 2021.<br>
 					</div>
 					<div class="paperLink">
 						| <a href="https://ieeexplore.ieee.org/abstract/document/9759163/" target="_blank" rel="nofollow">Paper</a>					
@@ -494,7 +494,7 @@
 						Xu Cao, HuanXin Zou, <b>XinYi Ying</b>, RunLin Li, ShiTian He, Fei Cheng
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>AIID</b></span>, 2021.<br>
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE AIID</b></span>, 2021.<br>
 					</div>
 					<div class="paperLink">
 						| <a href="https://ieeexplore.ieee.org/abstract/document/9456523/" target="_blank" rel="nofollow">Paper</a>					
@@ -543,7 +543,7 @@
 					<b>Xinyi Ying</b>, Longguang Wang, Yingqian Wang, Weidong Sheng, Wei An, Yulan Guo
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>IEEE SPL</b></span>, 2020.<br>
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE SPL</b></span>, 2020.<br>
 					</div>
 					<div class="paperLink">
 						| <a href="https://arxiv.org/pdf/2004.02803" target="_blank" rel="nofollow">Paper</a>						
@@ -566,7 +566,7 @@
 						<b>Xinyi Ying</b>, Longguang Wang, Yingqian Wang, Weidong Sheng, Wei An, Yulan Guo
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>IEEE SPL</b></span>, 2020.<br>
+						<span style="color:rgb(0, 0, 0)"> <b>IEEE SPL</b></span>, 2020.<br>
 					</div>
 					<div class="paperLink">
 						| <a href="https://arxiv.org/pdf/2004.02803" target="_blank" rel="nofollow">Paper</a>
