--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="">
+					<img border="0" width="200" height="130" src="/imgs/Incorporating.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -442,7 +442,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/SAAN.png">
+					<img border="0" width="200" height="130" src="imgs/Channelmix.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -463,7 +463,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/SAAN.png">
+					<img border="0" width="200" height="130" src="imgs/Double.png">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -484,7 +484,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/SAAN.png">
+					<img border="0" width="200" height="130" src="imgs/Using.png">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
