--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 		<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/SDF.jpg">
+					<img border="0" width="200" height="130" src="imgs/SDF.JPG">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -346,7 +346,7 @@
 	<div class="paper short">
 			<div class="sub-left">
 				<span></span>
-				<img border="0" width="200" height="130" src="imgs/MoCoPnet.jpg">
+				<img border="0" width="200" height="130" src="imgs/MoCoPnet.JPG">
 			</div>
 			<div class="sub-right">
 				<div class="paperTitle">
@@ -398,7 +398,7 @@
 	<div class="paper short">
 		<div class="sub-left">
 			<span></span>
-			<img border="0" width="200" height="130" src="imgs/Symmetric.jpg">
+			<img border="0" width="200" height="130" src="imgs/Symmetric.JPG">
 		</div>
 		<div class="sub-right">
 			<div class="paperTitle">
@@ -420,7 +420,7 @@
 		<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img src="imgs/DSFNet.jpg" width="200" height="130">
+					<img src="imgs/DSFNet.JPG" width="200" height="130">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
