--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				National University of Defense Technology (NUDT)<p>
 				Email: yingxinyi18@nudt.edu.cn<p>				
 			</div>
-			         <a href="https://www.researchgate.net/profile/Yingqian_Wang3?ev=prf_highl" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
+			         <a href="https://www.researchgate.net/profile/Xinyi-Ying/research" target="_blank" rel="nofollow"><span>Research Gate</span></a>  |
 			         <a href="https://github.com/XinyiYing" target="_blank" rel="nofollow"><span>Github</span></a>  |
 				 <a href="https://scholar.google.cz/citations?user=45ifNRkAAAAJ&hl=zh-CN" target="_blank" rel="nofollow"><span>Google Scholar</span></a>  
 			
@@ -275,7 +275,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="/imgs/Incorporating.jpg">
+					<img border="0" width="200" height="130" src="imgs/Incorporating.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -463,7 +463,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/Double.png">
+					<img border="0" width="200" height="130" src="imgs/Double.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -484,7 +484,7 @@
 			<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/Using.png">
+					<img border="0" width="200" height="130" src="imgs/Using.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -570,7 +570,7 @@
 					</div>
 					<div class="paperLink">
 						| <a href="https://arxiv.org/pdf/2004.02803" target="_blank" rel="nofollow">Paper</a>
-						| <a href="https://github.com/XinyiYing/SAM" target="_blank" rel="nofollow">News</a>					
+						| <a href="https://github.com/XinyiYing/SAM" target="_blank" rel="nofollow">Code</a>					
 					</div>
 				</div>
 			</div>	
@@ -636,7 +636,6 @@
 				<div class="paperName"><b>
 					2023 | Best Paper of China Society of Image and Graphics (LESPS CVPR)<br>
 					2022 | Second-class Scholarship of NUDT<br>
-					2022 | Outstanding Master Dissertation Award of NUDT<br>
 					2022 | Outstanding Master Dissertation Award of NUDT<br>
 					2022 | Excellent Student of NUDT<br>
 					2021 | Excellent Student of NUDT
