--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 		<div class="section">
 			<span class="Title"><b>Brief Bio</b></span><p>			
 				<div class="Bio">
-					I received my Master degree from Master degrees from NUDT in 2018. Currently, I'm a PHD student with the College of Electronic Science and Technology, NUDT. My research interests focus on optical imaging and detection, particularly on
-					<b style="mso-bidi-font-weight:normal">infrared small target detection</b> and <b style="mso-bidi-font-weight:normal">weakly supervised semantic segmentation</b>.</span></p>
+					I received my Master degree from Master degrees from NUDT in 2018. Currently, I'm a PHD student with the College of Electronic Science and Technology, NUDT. My research interests focus on <b style="mso-bidi-font-weight:normal">small object detection</b> and <b style="mso-bidi-font-weight:normal">image super-resolution</b>.</span></p>
 				</div>
 
 
@@ -264,8 +263,7 @@
 						<span style="color:red"> <b>CVPR</b></span>, 2023.<br> 
 					</div>
 					<div class="paperLink">
-						| <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Ying_Mapping_Degeneration_Meets_Label_Evolution_Learning_Infrared_Small_Target_Detection_CVPR_2023_paper.pdf" target="_blank" rel="nofollow">Paper</a>
-						| <a href="https://openaccess.thecvf.com/content/CVPR2023/supplemental/Ying_Mapping_Degeneration_Meets_CVPR_2023_supplemental.pdf" target="_blank" rel="nofollow">Supp</a>
+						| <a href="https://arxiv.org/pdf/2304.01484.pdf" target="_blank" rel="nofollow">Paper</a>
 						| <a href="https://xinyiying.github.io/LESPS/" target="_blank" rel="nofollow">Webpage</a>						
 						| <a href="https://github.com/XinyiYing/LESPS" target="_blank" rel="nofollow">Code</a>	
 					</div>
@@ -361,6 +359,27 @@
 				<div class="paperLink">
 					| <a href="https://arxiv.org/pdf/2201.01014" target="_blank" rel="nofollow">Paper</a>
 					| <a href="https://github.com/XinyiYing/MoCoPnet" target="_blank" rel="nofollow">Code</a>	
+				</div>
+			</div>
+		</div>
+
+		<div class="paper short">
+			<div class="sub-left">
+				<span></span>
+				<img border="0" width="200" height="130" src="imgs/MS-Optical.png">
+			</div>
+			<div class="sub-right">
+				<div class="paperTitle">
+					Multi-scale Optical Flow Estimation for Video Infrared Small Target Detection
+				</div>
+				<div class="paperName">
+					Yihang Luo, <b>Xinyi Ying</b>, Ruojing Li, Yujun Wan, Bo Hu, Qiang Ling
+				</div>
+				<div class="paperPub">
+					<span style="color:rgb(0, 0, 0)"> <b>IEEE CEI</b></span>, 2022.<br>
+				</div>
+				<div class="paperLink">
+					| <a href="https://ieeexplore.ieee.org/abstract/document/9950186/" target="_blank" rel="nofollow">Paper</a>
 				</div>
 			</div>
 		</div>
@@ -590,6 +609,7 @@
 					<a href="" target="_blank" rel="nofollow">Resourse-Limited Infrared Small Target Detection Challenge @ ICPR 2024</a>,<br>
 					<br>
 					Reviewer:<br>
+					<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83" target="_blank" rel="nofollow">IEEE Transactions on Image Processing</a> <br>
 					<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76" target="_blank" rel="nofollow">IEEE Transactions on Circuits and Systems for Video Technology</a> <br>
 					<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=36" target="_blank" rel="nofollow">IEEE Transactions on Geoscience and Remote Sensing</a> <br>
 					<a href="https://www.sciencedirect.com/journal/international-journal-of-applied-earth-observation-and-geoinformation?utm_campaign=STMJ_1636705839_SC&utm_medium=SRCH&utm_source=B&dgcid=STMJ_1636705839_SC" target="_blank" rel="nofollow">IEEE International Journal of Applied Earth Observation and Geoinformation</a> <br>
@@ -605,10 +625,10 @@
 					<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=36" target="_blank" rel="nofollow">Chinese Conference on Pattern Recognition and Computer Vision</a> <br>
 					<a href="https://link.springer.com/journal/530/volumes-and-issues" target="_blank" rel="nofollow">Multimedia Systems</a> <br>
 					<a href="https://www.aimspress.com/journal/MBE" target="_blank" rel="nofollow">
-						Mathematical Biosciences and Engineering</a> 
+						Mathematical Biosciences and Engineering</a> <br>
+					<a href="https://www.editorialmanager.com/jvci/" target="_blank" rel="nofollow">
+						Journal of Visual Communication and Image Representation</a> 	
 					<br>					
-					......<br>
-					<br>
 					</b></div>
 			</div>		
 
@@ -634,8 +654,9 @@
 				<hr style="BORDER-LEFT-STYLE: none; BORDER-TOP: gray 2px groove; HEIGHT: 0px; BORDER-BOTTOM-STYLE: none; BORDER-RIGHT-STYLE: none">
 		
 				<div class="paperName"><b>
-					2023 | Best Paper of China Society of Image and Graphics (LESPS CVPR)<br>
+					2023 | Best Paper of China Society of Image and Graphics (<a href="https://github.com/XinyiYing/LESPS" target="_blank" rel="nofollow">LESPS CVPR</a> )<br>
 					2022 | Second-class Scholarship of NUDT<br>
+					2022 | Outstanding Master Dissertation Award (Provincial and ministerial awards)<br>
 					2022 | Outstanding Master Dissertation Award of NUDT<br>
 					2022 | Excellent Student of NUDT<br>
 					2021 | Excellent Student of NUDT
