--- a/index.html
+++ b/index.html
@@ -215,6 +215,54 @@
 		</b></div>
 	</div> -->
 	
+	<div class="clear"></div>
+	<div class="section">
+	<span class="Title"><b>Publications --- 2025</b></span><p><p>
+	<hr style="BORDER-LEFT-STYLE: none; BORDER-TOP: gray 2px groove; HEIGHT: 0px; BORDER-BOTTOM-STYLE: none; BORDER-RIGHT-STYLE: none">
+	
+	<div class="paper short">
+		<div class="sub-left">
+			<span></span>
+			<img border="0" width="200" height="130" src="imgs/RGBT_Tiny.png">
+		</div>
+		<div class="sub-right">
+			<div class="paperTitle">
+				Visible-thermal tiny object detection: A benchmark dataset and baselines
+			</div>
+			<div class="paperName">
+				<b>Xinyi Ying</b>, Chao Xiao, Wei An, Ruojing Li, Xu He, Boyang Li, Xu Cao, Zhaoxu Li, Yingqian Wang, Mingyuan Hu, Qingyu Xu, Zaiping Lin, Miao Li, Shilin Zhou, Weidong Sheng, Li Liu
+			</div>
+			<div class="paperPub">
+				<span style="color:red"> <b>TPAMI</b></span>, 2025.<br> 
+			</div>
+			<div class="paperLink">
+				| <a href="https://ieeexplore.ieee.org/abstract/document/10914515/" target="_blank" rel="nofollow">Paper</a>						
+				| <a href="https://github.com/XinyiYing/RGBT-Tiny/" target="_blank" rel="nofollow">Code</a>	
+			</div>
+		</div>
+	</div>
+
+	<div class="paper short">
+		<div class="sub-left">
+			<span></span>
+			<img border="0" width="200" height="150" src="imgs/RFR.png">
+		</div>
+		<div class="sub-right">
+			<div class="paperTitle">
+				Infrared Small Target Detection in Satellite Videos: A New Dataset and A Novel Recurrent Feature Refinement Framework
+			</div>
+			<div class="paperName">
+				<b>Xinyi Ying</b>, Li Liu, Zaipin Lin, Yangsi Shi, Yingqian Wang, Ruojing Li, Xu Cao, Boyang Li, Shilin Zhou, Wei An
+			</div>
+			<div class="paperPub">
+				<span style="color:red"> <b>TGRS</b></span>, 2025.<br> 
+			</div>
+			<div class="paperLink">
+				| <a href="https://arxiv.org/pdf/2304.01484.pdf" target="_blank" rel="nofollow">Paper</a>					
+				| <a href="https://github.com/XinyiYing/RFR" target="_blank" rel="nofollow">Code</a>	
+			</div>
+		</div>
+	</div>
 	
 	<div class="clear"></div>
 	<div class="section">
@@ -222,9 +270,30 @@
 	<hr style="BORDER-LEFT-STYLE: none; BORDER-TOP: gray 2px groove; HEIGHT: 0px; BORDER-BOTTOM-STYLE: none; BORDER-RIGHT-STYLE: none">
 		
 		<div class="paper short">
+			<div class="sub-left">
+				<span></span>
+				<img border="0" width="200" height="150" src="imgs/ICPR2024.png">
+			</div>
+			<div class="sub-right">
+				<div class="paperTitle">
+					ICPR 2024 Competition on Resource-Limited Infrared Small Target Detection Challenge: Methods and Results
+				</div>
+				<div class="paperName">
+					Boyang Li, <b>Xinyi Ying</b>, Ruojing Li, Yongxian Liu, Yangsi Shi, Miao Li, Xin Zhang, Mingyuan Hu, Chenyang Wu, etc
+				</div>
+				<div class="paperPub">
+					<span style="color:rgb(0, 0, 0)"> <b>ICPR</b></span>, 2025.<br>
+				</div>
+				<div class="paperLink">
+					| <a href="https://www.sciencedirect.com/science/article/pii/S1569843224000712" target="_blank" rel="nofollow">Paper</a>							
+				</div>
+			</div>
+		</div>	
+
+		<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/OBBInst.jpg">
+					<img border="0" width="200" height="110" src="imgs/OBBInst.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
@@ -234,7 +303,7 @@
 						Xu Cao, Huanxin Zou, Jun Li, <b>Xinyi Ying</b>, Shitian He
 					</div>
 					<div class="paperPub">
-						<span style="color:red"> <b>JAG</b></span>, 2024.<br> 
+						<span style="color:red"> <b>JAG</b></span>, 2023.<br> 
 					</div>
 					<div class="paperLink">
 						| <a href="https://www.sciencedirect.com/science/article/pii/S1569843224000712" target="_blank" rel="nofollow">Paper</a>							
@@ -552,7 +621,7 @@
 		<div class="paper short">
 				<div class="sub-left">
 					<span></span>
-					<img border="0" width="200" height="130" src="imgs/D3Dnet.jpg">
+					<img border="0" width="200" height="105" src="imgs/D3Dnet.jpg">
 				</div>
 				<div class="sub-right">
 					<div class="paperTitle">
