--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 		</div>
 		<div class="sub-right">
 			<div class="paperTitle">
-				Visible-thermal tiny object detection: A benchmark dataset and baselines
+				Visible-Thermal Tiny Object Detection: A Benchmark Dataset and Baselines
 			</div>
 			<div class="paperName">
 				<b>Xinyi Ying</b>, Chao Xiao, Wei An, Ruojing Li, Xu He, Boyang Li, Xu Cao, Zhaoxu Li, Yingqian Wang, Mingyuan Hu, Qingyu Xu, Zaiping Lin, Miao Li, Shilin Zhou, Weidong Sheng, Li Liu
