--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 		<div class="paper short">
 			<div class="sub-left">
 				<span></span>
-				<img border="0" width="200" height="150" src="imgs/ICPR2024.png">
+				<img border="0" width="200" height="150" src="imgs/ICPR2024.PNG">
 			</div>
 			<div class="sub-right">
 				<div class="paperTitle">
